c++17/allocator/error.txt
g++ -std=c++17 -Wall -Wextra -O2 -c ex1.cpp -o ex1.o
In file included from /usr/include/c++/11/list:63,
                 from ex1.cpp:5:
/usr/include/c++/11/bits/stl_list.h: In instantiation of ‘class std::__cxx11::list<std::tuple<double, float, char>, std::scoped_allocator_adaptor<AlignedAllocator<double>, AlignedAllocator<float, 4> > >’:
ex1.cpp:85:12:   required from here
/usr/include/c++/11/bits/stl_list.h:572:64: error: static assertion failed: std::list must have the same value_type as its allocator
  572 |       static_assert(is_same<typename _Alloc::value_type, _Tp>::value,
      |                                                                ^~~~~
/usr/include/c++/11/bits/stl_list.h:572:64: note: ‘std::integral_constant<bool, false>::value’ evaluates to false
ex1.cpp: In instantiation of ‘void AlignedAllocator<T, Alignment>::deallocate(T*, std::size_t) [with T = std::_List_node<std::tuple<double, float, char> >; long unsigned int Alignment = 8; std::size_t = long unsigned int]’:
/usr/include/c++/11/bits/alloc_traits.h:345:23:   required from ‘static void std::allocator_traits< <template-parameter-1-1> >::deallocate(_Alloc&, std::allocator_traits< <template-parameter-1-1> >::pointer, std::allocator_traits< <template-parameter-1-1> >::size_type) [with _Alloc = AlignedAllocator<std::_List_node<std::tuple<double, float, char> >, 8>; std::allocator_traits< <template-parameter-1-1> >::pointer = std::_List_node<std::tuple<double, float, char> >*; std::allocator_traits< <template-parameter-1-1> >::size_type = long unsigned int]’
/usr/include/c++/11/scoped_allocator:365:36:   required from ‘void std::scoped_allocator_adaptor<_OuterAlloc, _InnerAllocs>::deallocate(std::scoped_allocator_adaptor<_OuterAlloc, _InnerAllocs>::pointer, std::scoped_allocator_adaptor<_OuterAlloc, _InnerAllocs>::size_type) [with _OuterAlloc = AlignedAllocator<std::_List_node<std::tuple<double, float, char> >, 8>; _InnerAllocs = {AlignedAllocator<float, 4>}; std::scoped_allocator_adaptor<_OuterAlloc, _InnerAllocs>::pointer = std::_List_node<std::tuple<double, float, char> >*; std::scoped_allocator_adaptor<_OuterAlloc, _InnerAllocs>::size_type = long unsigned int]’
/usr/include/c++/11/bits/alloc_traits.h:345:23:   required from ‘static void std::allocator_traits< <template-parameter-1-1> >::deallocate(_Alloc&, std::allocator_traits< <template-parameter-1-1> >::pointer, std::allocator_traits< <template-parameter-1-1> >::size_type) [with _Alloc = std::scoped_allocator_adaptor<AlignedAllocator<std::_List_node<std::tuple<double, float, char> >, 8>, AlignedAllocator<float, 4> >; std::allocator_traits< <template-parameter-1-1> >::pointer = std::_List_node<std::tuple<double, float, char> >*; std::allocator_traits< <template-parameter-1-1> >::size_type = long unsigned int]’
/usr/include/c++/11/bits/allocated_ptr.h:74:45:   required from ‘std::__allocated_ptr<_Alloc>::~__allocated_ptr() [with _Alloc = std::scoped_allocator_adaptor<AlignedAllocator<std::_List_node<std::tuple<double, float, char> >, 8>, AlignedAllocator<float, 4> >]’
/usr/include/c++/11/bits/stl_list.h:637:38:   required from ‘std::__cxx11::list<_Tp, _Alloc>::_Node* std::__cxx11::list<_Tp, _Alloc>::_M_create_node(_Args&& ...) [with _Args = {const std::tuple<double, float, char>&}; _Tp = std::tuple<double, float, char>; _Alloc = std::scoped_allocator_adaptor<AlignedAllocator<double>, AlignedAllocator<float, 4> >; std::__cxx11::list<_Tp, _Alloc>::_Node = std::__cxx11::list<std::tuple<double, float, char>, std::scoped_allocator_adaptor<AlignedAllocator<double>, AlignedAllocator<float, 4> > >::_Node]’
/usr/include/c++/11/bits/stl_list.h:1912:32:   required from ‘void std::__cxx11::list<_Tp, _Alloc>::_M_insert(std::__cxx11::list<_Tp, _Alloc>::iterator, _Args&& ...) [with _Args = {const std::tuple<double, float, char>&}; _Tp = std::tuple<double, float, char>; _Alloc = std::scoped_allocator_adaptor<AlignedAllocator<double>, AlignedAllocator<float, 4> >; std::__cxx11::list<_Tp, _Alloc>::iterator = std::__cxx11::list<std::tuple<double, float, char>, std::scoped_allocator_adaptor<AlignedAllocator<double>, AlignedAllocator<float, 4> > >::iterator]’
/usr/include/c++/11/bits/stl_list.h:1213:24:   required from ‘void std::__cxx11::list<_Tp, _Alloc>::push_back(const value_type&) [with _Tp = std::tuple<double, float, char>; _Alloc = std::scoped_allocator_adaptor<AlignedAllocator<double>, AlignedAllocator<float, 4> >; std::__cxx11::list<_Tp, _Alloc>::value_type = std::tuple<double, float, char>]’
ex1.cpp:85:22:   required from here
ex1.cpp:39:41: warning: unused parameter ‘n’ [-Wunused-parameter]
   39 |     void deallocate(T* ptr, std::size_t n) noexcept {
      |                             ~~~~~~~~~~~~^
make: *** [Makefile:25: ex1.o] Error 1
